[package]
name = "rust-codespaces"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
pretty_env_logger = "0.4"
serde_derive = "1.0"
rust-fsm = "0.6.0"
