[package]
name = "rust-codespaces"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-session = { features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
web3 = "0.17.0"
ethers = { version = "1.0.0", features = ["abigen"] }
eyre = "0.6"
serde_json = "1"
futures = "0.3"
actix-cors ="0.6.4"